hash-archive/cirrus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hash-archive
  namespace: hash-archive
  labels:
    k8s-app: hash-archive
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    k8s-app: hash-archive
  type: ClusterIP
